reducing the scale of demo object

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
         <a-camera gps-camera rotation-reader></a-camera>
 
-        <a-entity gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude:79.08884479999999; latitude:21.158297599999997;" animation-mixer/>
+        <a-entity gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.015 0.015 0.015" gps-entity-place="longitude:73.7910; latitude: 19.9973;" animation-mixer/>
     </a-scene>
     
 </body>
